src/parser/snapshots/minic__parser__tests__parser_simple_fn.snap
---
source: src/parser/tests.rs
expression: output
---
type: Program
function_defs:
  - type: FunctionDef
    name:
      token_type: Identifier(Symbol(0))
      lexeme: main
      line_col_begin:
        - 1
        - 5
      line_col_end:
        - 1
        - 9
    body:
      - type: ReturnStmt
        expr:
          type: Constant
          token:
            token_type: Literal(Integer(0))
            lexeme: "0"
            line_col_begin:
              - 1
              - 25
            line_col_end:
              - 1
              - 26
