src/parser/snapshots/minic__parser__tests__unary_expr.snap
---
source: src/parser/tests.rs
expression: "test_string_success(\"int main(void) { return ~-~-1; }\")?"
---
type: Program
function_defs:
  - type: FunctionDef
    name:
      token_type: Identifier(Symbol(0))
      lexeme: main
      line_col_begin:
        - 1
        - 5
      line_col_end:
        - 1
        - 9
    body:
      - type: ReturnStmt
        expr:
          type: UnaryExpr
          operator: BitNot
          operand:
            type: UnaryExpr
            operator: Negate
            operand:
              type: UnaryExpr
              operator: BitNot
              operand:
                type: UnaryExpr
                operator: Negate
                operand:
                  type: Constant
                  token:
                    token_type: Literal(Integer(1))
                    lexeme: "1"
                    line_col_begin:
                      - 1
                      - 29
                    line_col_end:
                      - 1
                      - 30
                operator_token: "(pos: 27 - 28) (1:28 - 1:29) `-`"
              operator_token: "(pos: 26 - 27) (1:27 - 1:28) `~`"
            operator_token: "(pos: 25 - 26) (1:26 - 1:27) `-`"
          operator_token: "(pos: 24 - 25) (1:25 - 1:26) `~`"
